# frostty

./: Cargo.toml  INSTALL.md  LICENSE  README.md  justfile
.github/: FUNDING.yml
docs/: configuration.md  features.md
extra/: frostty.info
extra/linux/: dev.bance.frostty.appdata.xml  frostty.desktop
src/: config.rs  main.rs  style.rs
src/terminal/: actions.rs  bindings.rs  font.rs  settings.rs  subscription.rs  terminal.rs  theme.rs  view.rs
src/terminal/backend/: mod.rs
src/widget/: mod.rs  terminal.rs
src/widget/terminal/: rich.rs  temp.rs  theme.rs
