[package]
name = "frostty"
version = "0.1.0"
edition = "2024"

[dependencies]
alacritty_terminal = "0.24.1"
iced_graphics = "0.13.0"
iced_core = "0.13.2"
open = "5.3.1"
anyhow = "1.0.93"
tokio = { version = "1.41.1", features = ["full"]}
toml = "0.8.20"
serde = "1.0.219"

[dependencies.iced]
version = "0.13.1"
features = ["wgpu", "tokio", "advanced", "lazy", "smol", "canvas"]
